Update The Portfolio

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <!-- <div class="badge"></div> -->
             </div>
             <p>
-              Mong muốn ứng tuyển vị trí <span>Web Developer</span> trong lĩnh
+              Mong muốn ứng tuyển vị trí <span>TTS ReactJS_React_Native</span> trong lĩnh
               vực phát triển web.
             </p>
           </div>
@@ -194,18 +194,6 @@
                     <img src="./assets/icons/react.svg" alt="react icon" />
                     <span>react</span>
                   </div>
-
-                  <div class="icon-badges">
-                    <img
-                      src="./assets/icons/postgresql.svg"
-                      alt="postgresql icon"
-                    />
-                    <span>postgresql</span>
-                  </div>
-                  <div class="icon-badges">
-                    <img src="./assets/icons/nextjs.svg" alt="nextjs icon" />
-                    <span>nextjs</span>
-                  </div>
                 </div>
               </div>
 
@@ -334,7 +322,7 @@
 
         <!-- cards -->
         <div class="projects__cards_container">
-          <a
+          <!-- <a
             href=""
             target="_blank"
             rel="noopener noreferrer"
@@ -352,7 +340,7 @@
                 <h3>Todo List By JavaScript</h3>
               </div>
             </div>
-          </a>
+          </a> -->
 
           <a
             href="https://github.com/MinhQuan5205/Assignment_PRJ301"
@@ -468,6 +456,7 @@
               </div>
             </div>
           </a>
+
           <a
             href="./assets/EXCELLENT STUDENT OF TRIMESTER_SUMMER2025.pdf"
             target="_blank"
@@ -484,6 +473,26 @@
               </div>
               <div class="projects__cards_titles">
                 <h3>Chứng Nhận EXCELLENT STUDENT OF TRIMESTER SUMMER 2025</h3>
+              </div>
+            </div>
+          </a>
+
+          <a
+            href=".assets/Chứng Nhận Rikkei.pdf"
+            target="_blank"
+            rel="noopener noreferrer"
+            download
+          >
+            <div class="projects_cards">
+              <div class="projects__cards_wrapper">
+                <img
+                  src="./assets/ChungNhan_Rikkei.png"
+                  alt="project1"
+                  class="projects__cards_img"
+                />
+              </div>
+              <div class="projects__cards_titles">
+                <h3>Chứng Nhận Khóa Học Ngắn Hạn Của Rikkei Acedemy</h3>
               </div>
             </div>
           </a>
