--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
       <div class="container projects_container">
         <!-- header -->
         <div class="section__header">
-          <h1 class="section__title">Các Dự Án Cũng Như Project Đã Làm Qua</h1>
+          <h1 class="section__title">Các Project Đã Làm Qua</h1>
           <p class="section__description">
             Bộ sưu tập projects giúp mình củng cố và hoàn thiện những kỹ năng kỹ
             thuật cũng như khả năng giải quyết vấn đề một cách sáng tạo.
@@ -317,25 +317,25 @@
 
         <!-- cards -->
         <div class="projects__cards_container">
-          <!-- <a
-            href=""
+          <a
+            href="https://todolist-bymern.onrender.com/"
             target="_blank"
             rel="noopener noreferrer"
           >
             <div class="projects_cards">
               <div class="projects__cards_wrapper">
                 <img
-                  src="./assets/project1.jpg"
+                  src="./assets/ToDoX.png"
                   alt="project1"
                   class="projects__cards_img"
                 />
               </div>
               <div class="projects__cards_titles">
                 <h4>dự án 1</h4>
-                <h3>Todo List By JavaScript</h3>
+                <h3>Todo List By MERN</h3>
               </div>
             </div>
-          </a> -->
+          </a>
 
           <a
             href="https://github.com/MinhQuan5205/Assignment_PRJ301"
